# CodingPractice17

./: .ignore  CMakeLists.txt  README.md  VimCommands.txt  main.cpp  makefile  output.txt  test
Solved/100/: main.cpp
Solved/10008/: main.cpp
Solved/10038/: main.cpp
Solved/10055/: main.cpp
Solved/10056/: main.cpp
Solved/10071/: input.txt  main.cpp
Solved/10093/: main.cpp  output.txt
Solved/10170/: main.cpp
Solved/10222/: main.cpp
Solved/10252/: main.cpp
Solved/10268/: main.cpp
Solved/10420/: input.txt
Solved/10783/: main.cpp
Solved/10812/: input.txt  main.cpp  output.txt
Solved/11063/: input.txt  main.cpp  output.txt
Solved/11332/: main.cpp
Solved/11349/: main.cpp
Solved/11461/: main.cpp
Solved/12019/: main.cpp
Solved/272/: main.cpp
Solved/490/: main.cpp
Solved/UVA100/: main.cpp
Solved/UVA10035/: main.cpp
Solved/UVA10041/: main.cpp
Solved/UVA10101/: main.cpp  output.txt
Solved/UVA10420/: main.cpp
Solved/UVA10929/: main.cpp
test.dSYM/Contents/Resources/DWARF/: test
